Adding validation for the login and registation form